--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,3 +65,9 @@ ul.bio {
 #info a:hover {
   text-decoration: underline;
 }
+
+#galle {
+  margin: 5px 75px
+}
+
+#image { margin: 0 auto; text-align:center}
