--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,12 @@
   %head
     %title Odi Bazó
     %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
+    %script{:src=>"http://code.jquery.com/jquery-1.4.2.min.js", :type=>"text/javascript"}
+    %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.galleryview-1.1.js", :type=>"text/javascript"}
+    %script{:src=>"http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js", :type=>"text/javascript"}
+    %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.timers-1.1.2.js", :type=>"text/javascript"}
+    %script{}
+      $(document).ready(function(){	$('#photos').galleryView({ panel_width: 800, panel_height: 410, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
     %link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
   %body
     #logo
@@ -16,4 +22,3 @@
         %area{ :shape=>"rect", :coords=>"12,104,85,136", :href=>"/video", :alt=>"VIDEO" }
     #section
       = yield
-  %script{:src=>"http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js", :type=>"text/javascript"}
