--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
     %script{:src=>"http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js", :type=>"text/javascript"}
     %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.timers-1.1.2.js", :type=>"text/javascript"}
     %script{}
-      $(document).ready(function(){	$('#photos').galleryView({ panel_width: 800, panel_height: 410, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
+      $(document).ready(function(){	$('#photos').galleryView({ transition_interval: 0, background_color: 'white', panel_width: 800, panel_height: 410, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
     %link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
   %body
     #logo
