--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,17 +8,17 @@
     %script{:src=>"http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js", :type=>"text/javascript"}
     %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.timers-1.1.2.js", :type=>"text/javascript"}
     %script{}
-      $(document).ready(function(){	$('#photos').galleryView({ transition_interval: 0, background_color: 'white', panel_width: 800, panel_height: 410, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
+      $(document).ready(function(){	$('#photos').galleryView({ transition_interval: 0, background_color: 'white', panel_width: 700, panel_height: 315, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
     %link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
   %body
-    #logo
-    #menu
-      %img{ :src=>"/images/menu.png", :width=>"95", :height=>"137", :border=>"0", :usemap=>"#Map"}
-      %map{ :name=>"Map", :id=>"Map"}
-        %area{ :shape=>"rect", :coords=>"11,0,85,25", :href=>"/", :alt=>"BIO+CV" }
-        %area{ :shape=>"rect", :coords=>"11,24,85,51", :href=>"/photo", :alt=>"PHOTO" }
-        %area{ :shape=>"rect", :coords=>"10,51,86,76", :href=>"/print", :alt=>"PRINT" }
-        %area{ :shape=>"rect", :coords=>"11,76,85,104", :href=>"/paint", :alt=>"PAINT" }
-        %area{ :shape=>"rect", :coords=>"12,104,85,136", :href=>"/video", :alt=>"VIDEO" }
-    #section
+    #wrapper
+      #logo
+      #menu
+        %img{ :src=>"/images/menu.png", :border=>"0", :usemap=>"#Map"}
+        %map{ :name=>"Map", :id=>"Map"}
+          %area{ :shape=>"rect", :coords=>"3,5,58,21", :href=>"/bio", :alt=>"BIO+CV" }
+          %area{ :shape=>"rect", :coords=>"3,22,58,41", :href=>"/photo", :alt=>"PHOTO" }
+          %area{ :shape=>"rect", :coords=>"3,41,58,65", :href=>"/print", :alt=>"PRINT" }
+          %area{ :shape=>"rect", :coords=>"3,65,58,87", :href=>"/paint", :alt=>"PAINT" }
+          %area{ :shape=>"rect", :coords=>"3,86,58,109", :href=>"/video", :alt=>"VIDEO" }
       = yield
