--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,3 +75,7 @@ ul.bio {
 }
 
 #image { margin: 0 auto; text-align:center}
+
+#section #galle #photos {}
+#section #galle #photos.galleruview {}
+#section #galle .galleryview {}
