--- a/views/paint.haml
+++ b/views/paint.haml
@@ -1,5 +1,6 @@
 - getPhotos('PAINT')
- 
+%link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
+
 #section
   %div{ :id=>"galle"}
     %div{ :id=>"photos", :class=>"galleryview"}
