--- a/views/photo.haml
+++ b/views/photo.haml
@@ -10,4 +10,4 @@
       %ul{ :class=>"filmstrip"}
         - @photo.each do |p|
           %li
-            %img{ :src=>"#{p[0][:url]}", :alt=>"Effet du soleil", :title=>"Effet du soleil", :style=>"height:50px; width:50px;"}
+            %img{ :src=>"#{p[0][:url]}", :alt=>"Odi Bazó", :title=>"Odi Bazó", :style=>"height:50px; width:50px;"}
