--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   margin:0 auto;
   width:1135px;
+  background: url("/images/fondo2.png")
 }
 #wrapper {
   background:url("/images/bg.png") no-repeat scroll 0 0 transparent;
