--- a/views/paint.haml
+++ b/views/paint.haml
@@ -1,5 +1,4 @@
 - getPhotos('PAINT')
-%link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
 
 #section
   %div{ :id=>"galle"}
@@ -11,4 +10,4 @@
       %ul{ :class=>"filmstrip"}
         - @photo.each do |p|
           %li
-            %img{ :src=>"#{p[0][:url]}", :alt=>"Effet du soleil", :title=>"Effet du soleil", :style=>"height:50px; width:50px;"}
+            %img{ :src=>"#{p[0][:url]}", :alt=>"Odi Bazó", :title=>"Odi Bazó", :style=>"height:50px; width:50px;"}
