--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   background: url("/images/fondo2.png")
 }
 #wrapper {
-  background:url("/images/bg.png") no-repeat scroll 0 0 transparent;
+  background:url("/images/triangle.png") no-repeat scroll 0 0 transparent;
   height:658px;
   width:1135px;
 }
