--- a/views/video.haml
+++ b/views/video.haml
@@ -2,54 +2,15 @@
 #section
   %div{ :id=>"galle"}
     %div{ :id=>"photos", :class=>"galleryview"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4393083722"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4393083722", :height=>"300", :width=>"500"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4390091158"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4390091158", :height=>"300", :width=>"500"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4386878509"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4386878509", :height=>"300", :width=>"500"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4386606209"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4386606209", :height=>"300", :width=>"500"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4387301156"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4387301156", :height=>"300", :width=>"500"}
-      %div{ :class=>"panel"}
-        #image
-          %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
-            %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4387253510"}
-            %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
-            %param{ :name=>"bgcolor", :value=>"#000000"}
-            %param{ :name=>"allowFullScreen", :value=>"true"}
-            %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=4387253510", :height=>"300", :width=>"500"}
+      - @photo.each do |p|
+        %div{ :class=>"panel"}
+          #image
+            %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
+              %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=#{p[0][:id]}"}
+              %param{ :name=>"movie", :value=>"http://www.flickr.com/apps/video/stewart.swf?v=71377"}
+              %param{ :name=>"bgcolor", :value=>"#000000"}
+              %param{ :name=>"allowFullScreen", :value=>"true"}
+              %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=#{p[0][:id]}", :height=>"300", :width=>"500"}
       %ul{ :class=>"filmstrip"}
         - @photo.each do |p|
           %li
