--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,12 +4,9 @@
     %title Odi Bazó
     %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
     %script{:src=>"http://code.jquery.com/jquery-1.4.2.min.js", :type=>"text/javascript"}
-    %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.galleryview-1.1.js", :type=>"text/javascript"}
-    %script{:src=>"http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js", :type=>"text/javascript"}
-    %script{:src=>"http://spaceforaname.com/js/jquery-galleryview-1.1/jquery.timers-1.1.2.js", :type=>"text/javascript"}
-    %script{}
-      $(document).ready(function(){	$('#photos').galleryView({ border: 0 , transition_interval: 0, background_color: 'white', panel_width: 700, panel_height: 315, frame_width: 50,	frame_height: 50, nav_theme: 'dark'	});	});
+    %script{:src=>"/scripts/slimbox2.js", :type=>"text/javascript"}
     %link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/style.css"}
+    %link{ :rel => "stylesheet", :type =>"text/css", :href=>"../stylesheets/slimbox2.css"}
   %body
     #wrapper
       #logo
