--- a/views/video.haml
+++ b/views/video.haml
@@ -3,7 +3,7 @@
   %div{ :id=>"galle"}
     %div{ :id=>"photos", :class=>"galleryview"}
       - @photo.each do |p|
-        %div{ :class=>"panel"}
+        %div{ :class=>"panel2"}
           #image
             %object{ :type=>"application/x-shockwave-flash", :width=>"500", :height=>"300", :data=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :classid=>"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"}
               %param{ :name=>"flashvars", :value=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=#{p[0][:id]}"}
@@ -11,7 +11,3 @@
               %param{ :name=>"bgcolor", :value=>"#000000"}
               %param{ :name=>"allowFullScreen", :value=>"true"}
               %embed{ :type=>"application/x-shockwave-flash", :src=>"http://www.flickr.com/apps/video/stewart.swf?v=71377", :bgcolor=>"#000000", :allowfullscreen=>"true", :flashvars=>"intl_lang=en-us&photo_secret=abc147433b&photo_id=#{p[0][:id]}", :height=>"300", :width=>"500"}
-      %ul{ :class=>"filmstrip"}
-        - @photo.each do |p|
-          %li
-            %img{ :src=>"#{p[0][:url]}", :alt=>"Odi Bazó", :title=>"Odi Bazó", :style=>"height:50px; width:50px;"}
